<resources>
    <string name="app_name">mine_is_yoursAPP</string>
    <string name="title_activity_maps">Map</string>
    <string name="Username">Nom d\'utilisateur</string>
    <string name="Password">mots de passe</string>
    <string name="RememberMe">Se Souvenir de moi</string>
    <string name="Login">connexion</string>
    <string name="Register">S\'inscrire</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">prenom</string>
    <string name="LastName">Nom</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirmez votre adress email</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Creer un nouveau Compte</string>

    <string name="nom_complet">Nom user</string>
    <string name="username_title">Username</string>
    <string name="edit_profile">Edit \nProfile</string>
    <string name="phone_title">Phone</string>
    <string name="phone">+000 00 000 000</string>
    <string name="email_title">Email</string>
    <string name="address_title">Address</string>
    <string name="address">Rabat</string>
    <string name="Edit">Edit</string>
    <string name="lantitude">Lantitude</string>
    <string name="langitude">Langitude</string>
    <string name="Modifier">Modifier</string>
    <string name="Annuler">Annuler</string>
    <string name="deconnecter">Déconnecter</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_messagerie">Messagerie</string>
    <string name="bottom_acceuil">Acceuil</string>
    <string name="bottom_autre">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fragment Boite messagerie</string>
    <string name="profile_test">Profile Fragment</string>
    <string name="title_activity_edit_profile">Edit_profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="ajouter_outil">Ajout Outil</string>
    <string-array name="categorie_outil">
        <item>Autres</item>
        <item>Outils Cuisine</item>
        <item>Outils Garage</item>
        <item>Outils InformatiqueS</item>
        <item>Meubles</item>
        <item>Divertissement</item>

    </string-array>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="change_email">Changer ton email</string>
    <string name="change_password">Changer le mot de passe</string>
    <string name="send_password_reset_email">Envoyer un e-mail de réinitialisation du mot de passe</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="title_activity_reset_password">ForgotPassordActivity</string>
    <string name="btn_forgot_password">Mot de passe oublié?</string>
    <string name="btn_reset_password">réinitialiser le mot de passe</string>
    <string name="btn_back"><![CDATA[<< retour]]></string>
    <string name="hint_new_email">nouveau email</string>
    <string name="btn_change">Changer</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_remove">Supprimer</string>
    <string name="btn_sign_out">Se déconnecter</string>
    <string name="lbl_forgot_password">Mot de passe oublié?</string>
    <string name="forgot_password_msg">Nous avons juste besoin de votre adresse e-mail enregistrée pour vous envoyer des instructions de réinitialisation de mot de passe.</string>
    <string name="contacter">Contacter</string>
    <string name="chercher">Chercher</string>
    <string name="General">Généralités</string>
    <string name="services">Services partagées</string>
</resources>