<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_android"
        android:enabled="true"
        android:icon="@drawable/baseline_email_black_24"
        android:title="@string/bottom_messagerie"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logo"
        android:enabled="true"
        android:icon="@drawable/baseline_home_black_24"
        android:title="@string/bottom_acceuil"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_landscape"
        android:enabled="true"
        android:icon="@drawable/baseline_place_black_24"
        android:title="@string/bottom_autre"
        app:showAsAction="ifRoom" />
</menu>