<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.UpdateProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/diego_ph">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon_profile"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:layout_marginLeft="40dp"
            android:src="@android:drawable/ic_btn_speak_now"
            app:srcCompat="@android:drawable/ic_dialog_email" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_complet"
            android:layout_marginTop="5dp"
            style="@style/TextName"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username_title"
                    style="@style/TextBlackTitle"/>

                <EditText
                    android:id="@+id/firstname_profile"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:inputType="text"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/lastname_profile"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_phone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_title"
                    style="@style/TextBlackTitle"/>

                <EditText
                    android:id="@+id/phone_profile"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    style="@style/Widget.AppCompat.EditText"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_email"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_title"
                    style="@style/TextBlackTitle"/>

                <EditText
                    android:id="@+id/email_profile"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_address"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_title"
                    style="@style/TextBlackTitle"/>

                <EditText
                    android:id="@+id/add_profile"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/annule_profile"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:text="@string/Annuler"
                android:background="@drawable/bg_button_annuler"/>

            <Button
                android:id="@+id/update_profile"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:text="@string/Modifier"
                android:background="@drawable/bg_button_rounded"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>